modified:   index.html modified:   style.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Halant&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Halant&family=Manrope&display=swap" rel="stylesheet">
     <title>Google Forms</title>
 </head>
 <body>
@@ -19,9 +25,9 @@
             <br>
             <label for="password">Re-type Password: <input type="password" placeholder="Enter your password" name="password" id="password"></label>
             <br>
-            <label for="gender">Gender: <input type="radio" name="male" id="male"> Male  <input type="radio" name="male" id="female"> Female</label>
+            <label for="gender" class="gender">Gender: <input type="radio" name="male" id="male">Male  <input type="radio" name="male" id="female">Female</label>
             <br><br>
-            <label for="skills">Techie Skills: <input type="checkbox" name="skill" id="skill"> HTML <input type="checkbox" name="skill" id="skill"> CSS <input type="checkbox" name="skill" id="skill"> Javascript</label>
+            <label for="skills" class="skill">Techie Skills: <input type="checkbox" name="skill" id="skill"> HTML <input type="checkbox" name="skill" id="skill"> CSS <input type="checkbox" name="skill" id="skill"> Javascript</label>
             <br><br>
             <label for="pnumber">Phone Number: <input type="text" placeholder="Enter your phone number" name="" id="" pattern="[0-9]{3}-[0-9]{8}"></label>
             <br>
